
   VAT DB Model v10

   - VAT form: have creation user and timestamp (todo #1488).
   - VAT record: have creation user and timestamp (todo #1488).
   - VAT record: have operation generation user and timestamp.
   - VAT record: take a copy of form data at creation time.
   - VAT record treeview: have a correspondence indicator.

 Bug fixes:

   - VAT record: notes is editable even if the declaration has been validated.

 Other changes:

   - my_utils_container_crestamp_init(): new function.
   - my_utils_str_from_uint_list(): new function.
   - my_utils_str_to_uint_list(): new function.
   - myIBin: define new "my-ibin-changed" signal (todo #1501).
   - myPeriod: new class, obsoletes ofoRecPeriod.
   - myPeriodBin: new class, obsoletes ofaRecPeriodProperties.

-----------------------------------------------------------------------
 Version 0.72
 ============

 Released on 2017-10-23

 Total files count:    853 files
 Total lines count: 579358 lines
 maintainer/run-distcheck.sh: real	3m6.206s

 New features and improvements:

   - Rate: check validity and document orphans (todo #1454).
   - Recurrent: more comprehensive label when recording waiting operations (todo #1478).
   - Recurrent: automatically go to waiting recurrent operations after each generation (todo #1475).
   - Unreconciliated/Unsettled entries: center the status indicator.
   - Unreconciliated/Unsettled entries: have a button per action (todo #1484).
   - VAT: record current date when the user validates a declaration.
   - VAT: complete the ofaTVARecordStore with missing datas (todo #1480).

 Bug fixes:

   - AccountProperties: don't try to get expander status for root accounts.
   - DBMS upgrade: fix account archive remediation (todo #1482).
   - DBMS upgrade: better manage the possible errors (todo #1483).
   - ofaEntryPage: better handle a reconciliation group deletion (todo #1479).
   - ofaMainWindow: activates already existing pages on demand (todo #1476).